feat: installed digit only directive

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -19,8 +19,9 @@
     </p>
 
     <div class="form-control">
-        <input class="bottom-bar__input" type="number" placeholder="ms" [formControl]="intervalControl" (keydown.enter)="onStartGame()" />
+        <input digitOnly class="bottom-bar__input" type="number" placeholder="ms" [formControl]="intervalControl" (keydown.enter)="onStartGame()" />
         <span class="error-message" *ngIf="intervalControl.hasError('required')">Required field</span>
+        <span class="error-message" *ngIf="intervalControl.hasError('min')">Min value is 200ms</span>
     </div>
 
     <button class="bottom-bar__start base-button" type="button" (click)="onStartGame()">Start</button>
