--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="container-sm wrapper" [ngStyle]="{'grid-template-columns': gridTemplateColumns, 'grid-template-rows': gridTemplateRows}">
     <button
-      *ngFor="let plate of gameService.plates$ | async; trackBy: trackByFn"
+      *ngFor="let plate of gameService.plates$ | async; trackByProp: 'id'"
       class="plate"
       type="button"
       aria-label="Plate"
