refactor: changed id field to index in plate model

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="container-sm wrapper" [ngStyle]="{'grid-template-columns': gridTemplateColumns, 'grid-template-rows': gridTemplateRows}">
     <button
-      *ngFor="let plate of gameService.plates$ | async; trackByProp: 'id'"
+      *ngFor="let plate of gameService.plates$ | async; trackByIndex"
       class="plate"
       type="button"
       aria-label="Plate"
