--- a/src/app/@shared/dialog/components/dialog/dialog.component.html
+++ b/src/app/@shared/dialog/components/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<div class="overlay">
+<div class="overlay" tabindex="0" appSetFocus (keydown.escape)="dialogRef.close()">
   <section class="dialog">
     <header class="dialog__header">
       <h2 class="dialog__title">{{config.title}}</h2>
