refactor: one more changes

--- a/src/app/@shared/dialog/components/dialog/dialog.component.html
+++ b/src/app/@shared/dialog/components/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <div class="overlay" tabindex="0" appSetFocus (keydown.escape)="dialogRef.close()">
   <section class="dialog">
     <header class="dialog__header">
-      <h2 class="dialog__title">{{config.title}}</h2>
+      <h2 class="dialog__title">{{config.data.title}}</h2>
     </header>
 
     <ng-template appInsertion> </ng-template>
